# ROS2-Path-Planning-and-Maze-Solving

./: .gitignore  LICENSE  README.md
docker/: Dockerfile  commands.md  (+4 more)
path_planning_ws/install/path_planning/share/path_planning/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
path_planning_ws/src/maze_bot/: inertia_calculations.txt  package.xml  setup.cfg  setup.py
path_planning_ws/src/maze_bot/launch/: gazebo.launch.py  maze_1_robot_camera.launch.py  maze_2_robot_camera.launch.py  maze_world.launch.py  mazebot_gazebo_spawn.launch.py  mazebot_maze2_world.launch.py  rviz.launch.py
path_planning_ws/src/maze_bot/maze_bot/: bot_control.py  bot_localization.py  bot_mapping.py  bot_motionplanning.py  bot_pathplanning.py  config.py  driving.py  driving_node.py  go_to_goal.py  inculcate.py  maze_solver.py  maze_solver_b.py  maze_solver_backup.py  test_mapping.py  utilities.py  video_saver.py
path_planning_ws/src/maze_bot/maze_bot/tests/: test_array.py  test_mapping.py
path_planning_ws/src/maze_bot/meshes/: base_link.stl  front_caster.stl  wheel_l.stl  wheel_r.stl
path_planning_ws/src/maze_bot/models/camera/: model.config  model.sdf
path_planning_ws/src/maze_bot/models/maze_2/: model.config  model.sdf
path_planning_ws/src/maze_bot/test/: drive_node.py  maze_world.launch.py
path_planning_ws/src/maze_bot/test/camera/: model.sdf
path_planning_ws/src/maze_bot/test/worlds/: test.world
path_planning_ws/src/maze_bot/urdf/: maze_bot.urdf  maze_bot_bad_inertia_example_andcollision.urdf
path_planning_ws/src/maze_bot/worlds/: maze_1.world  maze_2.world  maze_2_with_camera.world  maze_and_camera.world  maze_solving_bot.world  maze_solving_bot_LastWorking.world
(+24 files in other folders)
